--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,9 @@ spring:
     driverClassName: org.h2.Driver
   
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: none
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
   h2: 
